--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ blogger_url: # your blogger URL
 
 contact_note: >
 
-google_analytics: UA-XXXXXXXXX # out your google-analytics code
+google_analytics: UA-152695514-1 # out your google-analytics code
 
 # -----------------------------------------------------------------------------
 # Blog
