--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 name: Soumya Sanyal
-email: sanyal.soumya8@gmail.com
+email: soumyasanyal@iisc.ac.in
 description: > # this means to ignore newlines until "url:"
   
 footer_text: >
