--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,6 +1,9 @@
 Vashishth:
     url: https://shikhar-vashishth.github.io/
 
+Vashishth*:
+    url: https://shikhar-vashishth.github.io/
+
 Talukdar:
     url: http://talukdar.net
 
@@ -15,3 +18,6 @@ Balachandran:
 
 Ranjan:
     url: https://www.linkedin.com/in/ekagra-ranjan
+
+Sun*:
+    url: https://www.cs.cmu.edu/~zhiqings/
