--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -21,3 +21,9 @@ Ranjan:
 
 Sun*:
     url: https://www.cs.cmu.edu/~zhiqings/
+
+Baker:
+    url: https://www.ipd.uw.edu/people/ipd-faculty-staff/david-baker/
+
+Dagar:
+    url: https://in.linkedin.com/in/anirudh-dagar-19518a140
